--- a/details.html
+++ b/details.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>img {max-width: 320px;}</style>
+    <style>
+        img {max-width: 320px;}
+    </style>
     <script src="js/details.js" type="module"></script>
 </head>
 <body>
